--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = esphome/ESP32-audioI2S@^2.0.7
+monitor_speed = 115200
+lib_deps = 
+	esphome/ESP32-audioI2S@^2.0.7
+	sparkfun/SparkFun VL6180 Sensor@^1.1.3
