better audoi blaocylh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,6 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp"
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "r.lsp.promptToInstall": false
 }
